--- a/files/ShowPage/index.html
+++ b/files/ShowPage/index.html
@@ -239,7 +239,7 @@ window.onclick = function(event) {
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+        <p class="m-0 text-center text-white">Copyright &copy; UNO Classifieds 2017</p>
       </div>
       <!-- /.container -->
     </footer>
