Focus for Signup

--- a/files/test.html
+++ b/files/test.html
@@ -162,7 +162,7 @@ padding-left:600px;
   <form class="modal-content animate" action="/action_page.php">
     <div class="container">
 	  <label><b>First Name</b></label>
-      <input type="text" placeholder="Enter First Name" name="First Name" required>
+      <input type="text" placeholder="Enter First Name" name="First Name" required autofocus>
 	  <br><label><b>Last Name</b></label>
       <input type="text" placeholder="Enter Last Name" name="Last Name" required>
 	  
