Autofocus for email button

--- a/files/ShowPage/index.html
+++ b/files/ShowPage/index.html
@@ -160,7 +160,7 @@
     <div class="modal-body">
       <p>Some text in the Modal Body</p>
       <p>Some other text...</p>
-<button>Leave an email!
+<button autofocus>Leave an email!
     </div>
     <div class="modal-footer">
       <h3></h3>
